[package]
name = "day13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
rstest = "0.18.2"
